@startuml

title __P01_MUBAN's Class Diagram__\n

  namespace com.baoge.designpattern {
    namespace xingweixing {
      namespace p01_muban {
        abstract class com.baoge.designpattern.xingweixing.p01_muban.AbsComputer {
            + startUp()
            # checkHardware()
            # isNeedLogin()
            # loadOs()
            # login()
            # powerOn()
        }
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace xingweixing {
      namespace p01_muban {
        class com.baoge.designpattern.xingweixing.p01_muban.CoderComputer {
            # login()
        }
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace xingweixing {
      namespace p01_muban {
        class com.baoge.designpattern.xingweixing.p01_muban.NormalComputer {
            # checkHardware()
            # isNeedLogin()
        }
      }
    }
  }
  

  com.baoge.designpattern.xingweixing.p01_muban.CoderComputer -up-|> com.baoge.designpattern.xingweixing.p01_muban.AbsComputer
  com.baoge.designpattern.xingweixing.p01_muban.NormalComputer -up-|> com.baoge.designpattern.xingweixing.p01_muban.AbsComputer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
